tests/NormalTests/paczka1/small_fuzzy/68811399.err
Error in line 4: AU8hoQ S308 66,4
Error in line 7: AU8hoQ A495 56,4
